examples/01-httproute-and-bad-listener/02-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: user01
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
  hostnames: ["user01.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: user02
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: http
  hostnames: ["user02.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /lalala
    backendRefs:
    - name: echo
      port: 3000
